028/01-terraform-custom-module/solution/terraform-aws-vpc/igw.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.main.id
  tags = merge(local.common_tags, var.igw_tags, {
    Name = "${var.project_name}-${var.environment}-igw"
  })
}
